# Weather_Report-Qml-Task

Service/: CMakeLists.txt  main.cpp  main.qml  servicecpp.cpp  servicecpp.h
Service/ServiceDetails/: CMakeLists.txt  serviceInformation.cpp  serviceInformation.h  serviceInterface.h
